@@ -8,7 +8,6 @@ import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.justice.laa.bulkclaim.controller.ControllerTestHelper.getOidcUser;
-import static uk.gov.justice.laa.bulkclaim.controller.SearchController.DEFAULT_SEARCH_PAGE_SORT;
 
 import jakarta.servlet.http.HttpSession;
 import java.util.Collections;
@@ -28,7 +27,7 @@ import org.springframework.web.client.HttpClientErrorException.BadRequest;
 import reactor.core.publisher.Mono;
 import uk.gov.justice.laa.bulkclaim.client.DataClaimsRestClient;
 import uk.gov.justice.laa.bulkclaim.dto.SubmissionOutcomeFilter;
-import uk.gov.justice.laa.bulkclaim.dto.SubmissionsSearchForm;
+import uk.gov.justice.laa.bulkclaim.dto.submission.search.SubmissionSearchQuery;
 import uk.gov.justice.laa.bulkclaim.util.OidcAttributeUtils;
 import uk.gov.justice.laa.bulkclaim.util.PaginationLinksBuilder;
 import uk.gov.justice.laa.bulkclaim.util.PaginationUtil;
@@ -58,37 +57,37 @@ class SearchControllerTest {
   }
 
   @Test
-  @DisplayName("Search GET should initialise form if not present")
-  void searchShouldAddFormIfNotPresent() {
-    when(model.containsAttribute("submissionsSearchForm")).thenReturn(false);
+  @DisplayName("Search GET should initialise query if not present")
+  void searchShouldAddQueryIfNotPresent() {
+    when(model.containsAttribute("submissionSearchQuery")).thenReturn(false);
 
     String view = searchController.search(model, sessionStatus, getOidcUser());
 
-    verify(model).addAttribute(eq("submissionsSearchForm"), any(SubmissionsSearchForm.class));
+    verify(model).addAttribute(eq("submissionSearchQuery"), any(SubmissionSearchQuery.class));
     verify(sessionStatus).setComplete();
     assertEquals("pages/submissions-search", view);
   }
 
   @Test
-  @DisplayName("Handle search should redirect to form if validation errors")
+  @DisplayName("Handle search should redirect to query if validation errors")
   void handleSearchShouldRedirectBackOnErrors() {
     when(bindingResult.hasErrors()).thenReturn(true);
-    final SubmissionsSearchForm form =
-        SubmissionsSearchForm.builder().submissionPeriod("01/01/2024").build();
+    final SubmissionSearchQuery query =
+        SubmissionSearchQuery.builder().submissionPeriod("01/01/2024").build();
     final Model localModel = new ExtendedModelMap();
 
-    String view = searchController.handleSearch(getOidcUser(), form, bindingResult, localModel);
+    String view = searchController.handleSearch(getOidcUser(), query, bindingResult, localModel);
 
     assertEquals("pages/submissions-search", view);
-    assertEquals(form, localModel.getAttribute("submissionsSearchForm"));
+    assertEquals(query, localModel.getAttribute("submissionSearchQuery"));
   }
 
   @Test
   @DisplayName("Handle search should redirect with query params when valid")
   void handleSearchShouldRedirectWithParamsOnSuccess() {
     when(bindingResult.hasErrors()).thenReturn(false);
-    final SubmissionsSearchForm form =
-        SubmissionsSearchForm.builder()
+    final SubmissionSearchQuery query =
+        SubmissionSearchQuery.builder()
             .submissionPeriod("JAN-2024")
             .areaOfLaw(AreaOfLaw.CRIME_LOWER.getValue())
             .offices(List.of("12345"))
@@ -96,11 +95,11 @@ class SearchControllerTest {
             .build();
     final Model localModel = new ExtendedModelMap();
 
-    String view = searchController.handleSearch(getOidcUser(), form, bindingResult, localModel);
+    String view = searchController.handleSearch(getOidcUser(), query, bindingResult, localModel);
 
     assertEquals(
         "redirect:/submissions/search/results?page=0&submissionPeriod=JAN-2024&areaOfLaw=CRIME "
-            + "LOWER&offices=12345&submissionStatuses=SUCCEEDED",
+            + "LOWER&offices=12345&submissionStatuses=SUCCEEDED&sort=createdOn,desc",
         view);
   }
 
@@ -120,18 +119,18 @@ class SearchControllerTest {
     when(paginationUtil.fromSubmissionsResultSet(response, 0, 10))
         .thenReturn(new Page().totalElements(1));
 
-    String view =
-        searchController.submissionsSearchResults(
-            0,
+    var query =
+        new SubmissionSearchQuery(
+            null,
+            null,
             "JAN-2024",
             AreaOfLaw.CRIME_LOWER.name(),
-            Collections.emptyList(),
-            SubmissionOutcomeFilter.SUCCEEDED,
-            DEFAULT_SEARCH_PAGE_SORT,
-            model,
-            getOidcUser(),
-            sessionStatus,
-            session);
+            List.of(),
+            SubmissionOutcomeFilter.SUCCEEDED);
+
+    String view =
+        searchController.submissionsSearchResults(
+            query, model, getOidcUser(), sessionStatus, session);
 
     verify(sessionStatus).setComplete();
     verify(model).addAttribute(eq("pagination"), any(Page.class));
@@ -148,18 +147,11 @@ class SearchControllerTest {
     when(claimsRestService.search(anyList(), any(), any(), any(), anyInt(), anyInt(), any()))
         .thenThrow(BadRequest.class);
 
+    var query = SubmissionSearchQuery.builder().build();
+
     String view =
         searchController.submissionsSearchResults(
-            0,
-            null,
-            null,
-            null,
-            null,
-            DEFAULT_SEARCH_PAGE_SORT,
-            model,
-            getOidcUser(),
-            sessionStatus,
-            session);
+            query, model, getOidcUser(), sessionStatus, session);
 
     assertEquals("error", view);
   }
@@ -171,18 +163,11 @@ class SearchControllerTest {
     when(claimsRestService.search(anyList(), any(), any(), any(), anyInt(), anyInt(), any()))
         .thenThrow(new RuntimeException("Boom"));
 
+    var query = SubmissionSearchQuery.builder().build();
+
     String view =
         searchController.submissionsSearchResults(
-            0,
-            "1234",
-            null,
-            null,
-            null,
-            DEFAULT_SEARCH_PAGE_SORT,
-            model,
-            getOidcUser(),
-            sessionStatus,
-            session);
+            query, model, getOidcUser(), sessionStatus, session);
 
     assertEquals("error", view);
   }
